--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,4 @@
 VITE_PAYSTACK_SECRET_KEY=pk_test_2915ea220808152453d34c4c827ebc50dd402148
+VITE_EMAILJS_PUBLIC_KEY=LgTy3RwbE1Lg2jY37
+VITE_EMAILJS_SERVICE_ID=service_pzj7gs1
+VITE_EMAILJS_TEMPLATE_ID=template_e28fftn
