--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^5.90.12",
     "dayjs": "^1.11.13",
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.4",
