Enhance dashboard functionality and update project documentation
- Revamped Dashboard component to display real-time statistics on anomalies and journeys.
- Updated routing to include Dashboard as the main view.
- Improved README with detailed project description, features, and setup instructions.
- Modified package.json to reflect accurate project version and description.
- Refactored SideList navigation items for better organization and clarity.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "smart-route",
+  "description": "Smart Road Anomaly Detection System - A web application for detecting, tracking, and navigating around road anomalies in real-time",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
